--- a/flac_codec_registration.src.html
+++ b/flac_codec_registration.src.html
@@ -12,10 +12,11 @@ Editor: Paul Adenot, w3cid 62410, Mozilla https://www.mozilla.org/
 Editor: Bernard Aboba, w3cid 65611, Microsoft Corporation https://www.microsoft.com/
 
 Abstract: This registration is entered into the [[webcodecs-codec-registry]].
-    It describes, for FLAC, the (1) fully qualified codec strings, (2)
-    the {{AudioDecoderConfig.description}} bytes, (3) the codec-specific
-    {{EncodedAudioChunk}} [=EncodedAudioChunk/[[internal data]]=] bytes, and (4)
-    the values of {{EncodedAudioChunk}} [=EncodedAudioChunk/[[type]]=].
+    It describes, for FLAC, the (1) fully qualified codec strings,
+    (2) the codec-specific {{EncodedAudioChunk}}
+    [=EncodedAudioChunk/[[internal data]]=] bytes, (3) the
+    {{AudioDecoderConfig.description}} bytes, and (4) the values of
+    {{EncodedAudioChunk}} [=EncodedAudioChunk/[[type]]=].
 
     The registration is not intended to include any information on whether a
     codec format is encumbered by intellectual property claims. Implementers and
