--- a/vp9_codec_registration.src.html
+++ b/vp9_codec_registration.src.html
@@ -12,11 +12,11 @@ Editor: Paul Adenot, w3cid 62410, Mozilla https://www.mozilla.org/
 Editor: Bernard Aboba, w3cid 65611, Microsoft Corporation https://www.microsoft.com/
 
 Abstract: This registration is entered into the [[webcodecs-codec-registry]].
-    It describes, for VP9, the (1) fully qualified codec strings, (2)
-    the {{VideoDecoderConfig.description}} bytes, (3) the codec-specific
-    extensions to {{VideoEncoderConfig}}, (4) the
-    {{EncodedVideoChunk}} [=EncodedVideoChunk/[[internal data]]=] bytes, and (5)
-    the meaning of {{EncodedVideoChunk}} [=EncodedVideoChunk/[[type]]=].
+    It describes, for VP9, the (1) fully qualified codec strings,
+    (2) the codec-specific {{EncodedVideoChunk}}
+    [=EncodedVideoChunk/[[internal data]]=] bytes, (3) the
+    {{VideoDecoderConfig.description}} bytes, and (4) the values of
+    {{EncodedVideoChunk}} [=EncodedVideoChunk/[[type]]=].
 
     The registration is not intended to include any information on whether a
     codec format is encumbered by intellectual property claims. Implementers and
@@ -71,16 +71,16 @@ Fully qualified codec strings {#fully-qualified-codec-strings}
 The codec string begins with the prefix `"vp09."`, followed by a variable length
 suffix as described in the "Codecs Parameter String" Section of [[VP9-ISOBMFF]].
 
-VideoDecoderConfig description {#videodecoderconfig-description}
-================================================================
-
-{{VideoDecoderConfig.description}} is not used for this codec.
-
 EncodedVideoChunk data {#encodedvideochunk-data}
 ================================================
 
 {{EncodedVideoChunk}} [=EncodedVideoChunk/[[internal data]]=] is expected to be
 a frame as described in Section 6 of [[VP9]].
+
+VideoDecoderConfig description {#videodecoderconfig-description}
+================================================================
+
+{{VideoDecoderConfig.description}} is not used for this codec.
 
 EncodedVideoChunk type {#encodedvideochunk-type}
 ================================================
