--- a/avc_codec_registration.src.html
+++ b/avc_codec_registration.src.html
@@ -12,11 +12,12 @@ Editor: Paul Adenot, w3cid 62410, Mozilla https://www.mozilla.org/
 Editor: Bernard Aboba, w3cid 65611, Microsoft Corporation https://www.microsoft.com/
 
 Abstract: This registration is entered into the [[webcodecs-codec-registry]].
-    It describes, for AVC (H.264), the (1) fully qualified codec strings, (2)
-    the {{VideoDecoderConfig.description}} bytes, (3) the codec-specific
-    extensions to {{VideoEncoderConfig}}, (4) the
-    {{EncodedVideoChunk}} [=EncodedVideoChunk/[[internal data]]=] bytes, and (5)
-    the meaning of {{EncodedVideoChunk}} [=EncodedVideoChunk/[[type]]=].
+    It describes, for AVC (H.264), the (1) fully qualified codec strings,
+    (2) the codec-specific {{EncodedVideoChunk}}
+    [=EncodedVideoChunk/[[internal data]]=] bytes, (3) the
+    {{VideoDecoderConfig.description}} bytes, (4) the values of
+    {{EncodedVideoChunk}} [=EncodedVideoChunk/[[type]]=], and (5) the
+    codec-specific extensions to {{VideoEncoderConfig}}
 
     The registration is not intended to include any information on whether a
     codec format is encumbered by intellectual property claims. Implementers and
@@ -71,7 +72,27 @@ Fully qualified codec strings {#fully-qualified-codec-strings}
 ==============================================================
 
 The codec string begins with the prefix "avc1." or "avc3.", with a suffix of 6
-characters as described respectively in Section 3.4 of [[rfc6381]] and Section 5.4.1 of [[iso14496-15]].
+characters as described respectively in Section 3.4 of [[rfc6381]] and Section
+5.4.1 of [[iso14496-15]].
+
+EncodedVideoChunk data {#encodedvideochunk-data}
+================================================
+
+{{EncodedVideoChunk}} [=EncodedVideoChunk/[[internal data]]=] is expected to be
+an access unit as defined in [[ITU-T-REC-H.264]] section 7.4.1.2.
+
+NOTE: An access unit contains exactly one primary coded picture.
+
+If the bitstream is in {{AvcBitstreamFormat/avc}} format,
+[=EncodedVideoChunk/[[internal data]]=] is assumed to be in canonical format, as
+defined in [[iso14496-15]] section 5.3.2.
+
+If the bitstream is in {{AvcBitstreamFormat/annexb}} format,
+[=EncodedVideoChunk/[[internal data]]=] is assumed to be in in Annex B format,
+as defined in [[ITU-T-REC-H.264]] Annex B.
+
+NOTE: Since [=EncodedVideoChunk/[[internal data]]=] is inherently byte-aligned,
+    implementations are not required to recover byte-alignment.
 
 VideoDecoderConfig description {#videodecoderconfig-description}
 ================================================================
@@ -91,6 +112,25 @@ NOTE: "annexb" format is described in greater detail by [[ITU-T-REC-H.264]],
     Annex B. This format is commonly used in live-streaming applications, where
     including the SPS and PPS data periodically allows users to easily start
     from the middle of the stream.
+
+EncodedVideoChunk type {#encodedvideochunk-type}
+================================================
+
+If an {{EncodedVideoChunk}}'s [=EncodedVideoChunk/[[type]]=] is
+{{EncodedVideoChunkType/key}}, and the bitstream is in
+{{AvcBitstreamFormat/avc}} format, then the {{EncodedVideoChunk}} is expected to
+contain a primary coded picture that is an instantaneous decoding refresh (IDR)
+picture.
+
+NOTE: If the bitstream is in {{AvcBitstreamFormat/avc}} format, parameter sets
+    necessary for decoding are included in {{VideoDecoderConfig.description}}.
+
+If an {{EncodedVideoChunk}}'s [=EncodedVideoChunk/[[type]]=] is
+{{EncodedVideoChunkType/key}}, and the bitstream is in
+{{AvcBitstreamFormat/annexb}} format, then the {{EncodedVideoChunk}} is expected
+to contain both a primary coded picture that is an instantaneous decoding
+refresh (IDR) picture, and all parameter sets necessary to decode all video data
+NAL units in the {{EncodedVideoChunk}}.
 
 VideoEncoderConfig extensions {#videoencoderconfig-extensions}
 ==============================================================
@@ -167,44 +207,6 @@ SPS and PPS are described in greater detail in sections G.3.41 and G.3.55 of
         section 5.3.3.1. This format is commonly used in .MP4 files, where the
         player generally has random access to the media data.
 </dl>
-
-EncodedVideoChunk data {#encodedvideochunk-data}
-================================================
-
-{{EncodedVideoChunk}} [=EncodedVideoChunk/[[internal data]]=] is expected to be
-an access unit as defined in [[ITU-T-REC-H.264]] section 7.4.1.2.
-
-NOTE: An access unit contains exactly one primary coded picture.
-
-If the bitstream is in {{AvcBitstreamFormat/avc}} format,
-[=EncodedVideoChunk/[[internal data]]=] is assumed to be in canonical format, as
-defined in [[iso14496-15]] section 5.3.2.
-
-If the bitstream is in {{AvcBitstreamFormat/annexb}} format,
-[=EncodedVideoChunk/[[internal data]]=] is assumed to be in in Annex B format,
-as defined in [[ITU-T-REC-H.264]] Annex B.
-
-NOTE: Since [=EncodedVideoChunk/[[internal data]]=] is inherently byte-aligned,
-    implementations are not required to recover byte-alignment.
-
-EncodedVideoChunk type {#encodedvideochunk-type}
-================================================
-
-If an {{EncodedVideoChunk}}'s [=EncodedVideoChunk/[[type]]=] is
-{{EncodedVideoChunkType/key}}, and the bitstream is in
-{{AvcBitstreamFormat/avc}} format, then the {{EncodedVideoChunk}} is expected to
-contain a primary coded picture that is an instantaneous decoding refresh (IDR)
-picture.
-
-NOTE: If the bitstream is in {{AvcBitstreamFormat/avc}} format, parameter sets
-    necessary for decoding are included in {{VideoDecoderConfig.description}}.
-
-If an {{EncodedVideoChunk}}'s [=EncodedVideoChunk/[[type]]=] is
-{{EncodedVideoChunkType/key}}, and the bitstream is in
-{{AvcBitstreamFormat/annexb}} format, then the {{EncodedVideoChunk}} is expected
-to contain both a primary coded picture that is an instantaneous decoding
-refresh (IDR) picture, and all parameter sets necessary to decode all video data
-NAL units in the {{EncodedVideoChunk}}.
 
 Privacy and Security Considerations {#privacy-and-security-considerations}
 ==========================================================================
