--- a/opus_codec_registration.src.html
+++ b/opus_codec_registration.src.html
@@ -12,10 +12,11 @@ Editor: Paul Adenot, w3cid 62410, Mozilla https://www.mozilla.org/
 Editor: Bernard Aboba, w3cid 65611, Microsoft Corporation https://www.microsoft.com/
 
 Abstract: This registration is entered into the [[webcodecs-codec-registry]].
-    It describes, for Opus, the (1) fully qualified codec strings, (2)
-    the {{AudioDecoderConfig.description}} bytes, (3) the codec-specific
-    {{EncodedAudioChunk}} [=EncodedAudioChunk/[[internal data]]=] bytes, and (4)
-    the values of {{EncodedAudioChunk}} [=EncodedAudioChunk/[[type]]=].
+    It describes, for Opus, the (1) fully qualified codec strings, (2) the
+    codec-specific {{EncodedAudioChunk}} [=EncodedAudioChunk/[[internal data]]=]
+    bytes, (3) the {{AudioDecoderConfig.description}} bytes, (4) the values of
+    {{EncodedAudioChunk}} [=EncodedAudioChunk/[[type]]=], and (5) the
+    codec-specific extensions to {{AudioEncoderConfig}}
 
     The registration is not intended to include any information on whether a
     codec format is encumbered by intellectual property claims. Implementers and
@@ -95,6 +96,15 @@ to be in {{OpusBitstreamFormat/ogg}} format.
 If an {{AudioDecoderConfig.description}} has not been set, the bitstream is
 assumed to be in {{OpusBitstreamFormat/opus}} format.
 
+EncodedAudioChunk type {#encodedaudiochunk-type}
+================================================
+
+The [=EncodedAudioChunk/[[type]]=] for an {{EncodedAudioChunk}} containing
+Opus is always "[=EncodedAudioChunkType/key=]".
+
+NOTE: Once the initialization has succeeded, any packet can be decoded at any
+time without error, but this might not result in the expected audio output.
+
 AudiEncoderConfig extensions {#audioencoderconfig-extensions}
 =============================================================
 
@@ -158,16 +168,6 @@ encoded audio stream.
     {{AudioDecoderConfig.description}}.
   </dd>
 </dl>
-
-
-EncodedAudioChunk type {#encodedaudiochunk-type}
-================================================
-
-The [=EncodedAudioChunk/[[type]]=] for an {{EncodedAudioChunk}} containing
-Opus is always "[=EncodedAudioChunkType/key=]".
-
-NOTE: Once the initialization has succeeded, any packet can be decoded at any
-time without error, but this might not result in the expected audio output.
 
 Privacy and Security Considerations {#privacy-and-security-considerations}
 ==========================================================================
