Export dfns for valid audio and video decoder cfgs
MSE-for-WebCodecs feature specification [1] needs to normatively
reference these concepts.

[1] https://github.com/w3c/media-source/issues/184

--- a/index.src.html
+++ b/index.src.html
@@ -1682,7 +1682,7 @@ dictionary AudioDecoderConfig {
 };
 </xmp>
 
-To check if an {{AudioDecoderConfig}} is a <dfn>valid AudioDecoderConfig</dfn>,
+To check if an {{AudioDecoderConfig}} is a <dfn export>valid AudioDecoderConfig</dfn>,
     run these steps:
 1. If codec is not a <a>valid codec string</a>, return `false`.
 2. Return `true`.
@@ -1724,7 +1724,7 @@ dictionary VideoDecoderConfig {
 };
 </xmp>
 
-To check if a {{VideoDecoderConfig}} is a <dfn>valid VideoDecoderConfig</dfn>,
+To check if a {{VideoDecoderConfig}} is a <dfn export>valid VideoDecoderConfig</dfn>,
 run these steps:
 1. If {{VideoDecoderConfig/codec}} is not a <a>valid codec string</a>, return
     `false`.
