--- a/samples/mp4-decode/index.html
+++ b/samples/mp4-decode/index.html
@@ -29,7 +29,7 @@
     if (e.data.type == "config") {
       let config = e.data.config;
       canvas.height = config.codedHeight;
-      canvas.width = config.codedwidth;
+      canvas.width = config.codedWidth;
       return;
     }
 
