Add Linear PCM to codec registry
NOTE: Linear PCM is the raw audio format used in WebCodecs and does not
require decoding. The motivation for registering the Linear PCM codec is
to enable passthrough "decoding" of PCM content as an architectural
simpliciation for WebCodecs applications.

--- a/codec_registry.src.html
+++ b/codec_registry.src.html
@@ -134,6 +134,13 @@ Audio Codec Registry {#audio-codec-registry}
       Registration](https://www.w3.org/TR/webcodecs-alaw-codec-registration/)
     [[WEBCODECS-ALAW-CODEC-REGISTRATION]]</td>
   </tr>
+  <tr>
+    <td>pcm-*</td>
+    <td>Linear PCM</td>
+    <td>[Linear PCM WebCodecs
+      Registration](https://www.w3.org/TR/webcodecs-pcm-codec-registration/)
+    [[WEBCODECS-ALAW-CODEC-REGISTRATION]]</td>
+  </tr>
 </table>
 
 Video Codec Registry {#video-codec-registry}
